@@ -512,6 +512,7 @@ Casper Stoel
 Peter Stoehr
 Ken Stox
 Daniel Stutzbach
+Paul Swartz
 William Tanksley
 Christian Tanzer
 Amy Taylor
